update index page

--- a/view/index.html
+++ b/view/index.html
@@ -85,7 +85,7 @@
         }
 
         function redirectToIndex() {
-            window.location.href = "http://localhost:8080/index";
+            window.location.href = "http://localhost:8080/";
         }
     </script>
 </body>
